--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,5 +3,11 @@
   "id": "818203235789864127",
   "api": "1.0.0",
   "main": "code.js",
-  "ui": "index.html"
+  "ui": "index.html",
+  "editorType": [
+    "figjam",
+    "figma",
+    "dev",
+    "slides"
+  ]
 }
