--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "typescript": "^3.7.4"
   },
   "dependencies": {
-    "sirv-cli": "^0.4.4",
-    "svelte-color": "^1.0.2"
+    "sirv-cli": "^0.4.4"
   }
 }
